# pidgin-otrng

./: .gitignore  .splintrc  .travis.yml  AUTHORS  ChangeLog  INSTALL  INSTALL.md  INSTALL.mingw  Makefile.am  Makefile.mingw  Makefile.mingw.notes  Makefile.static  NEWS  README  README.md  autogen.sh  configure.ac  dialogs.c  dialogs.h  fingerprint.c  fingerprint.h  gtk-dialog.c  gtk-dialog.h  gtk-ui.c  gtk-ui.h  i18n.h  long_term_keys.c  long_term_keys.h  makedist  otr-icons.h  otr-plugin.c  otr-plugin.h  otr4-client.c  otr4-client.h  otrng-client.c  otrng-client.h  otrng-plugin.c  otrng-plugin.h  persistance.c  persistance.h  (+27 more)
help/: authenticate.php  authenticate_fr.php  fingerprint.php  helpnav.php  levels.php  levels_fr.php  main.css  sessions.php  unverified.php
icons/: finished.xpm  not_private.xpm  private.xpm  unverified.xpm
m4/: nls.m4
packaging/fedora/: gaim-otr.spec  pidgin-otr.spec
packaging/windows/: gaim-otr.nsi  pidgin-otr.nsi
patches/win32/: gcrypt-1.5.4-mingw.diff  gpg-error-1.17-mingw.diff  libgcrypt-config.h.patch  rndw32.diff
po/: ChangeLog  Makefile.mingw  POTFILES.in  README  ar.po  cs.po  da.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  hu.po  it.po  my_MM.po  nb_NO.po  nl.po  nn.po  pidgin-otrng.pot  pl.po  pt_BR.po  ru.po  sk.po  sv.po  vi.po  zh_CN.po
test/: Makefile.am  test.c  test_plugin.c  test_prekey_discovery_jabber.c
